feat(web): add meta tags

--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <link rel="icon" type="image/svg+xml" href="/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tap & Chill</title>
+    <meta name="description" content="Tune into tapnchill for the best in chill music and relaxing tunes, 24/7 live streaming radio station." />
+    <meta name="keywords" content="chill music, online radio station, streaming music, relaxing playlists, variety music" />
+    <meta property="og:title" content="tapnchill | The Best Online Music Streaming Radio Station" />
+    <meta property="og:description" content="Discover a variety of music genres to relax and chill with. Live streaming now!" />
+    <meta property="og:url" content="https://tapnchill.fm" />
+    <meta property="og:image" content="https://tapnchill.fm/icon.png" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://tapnchill.fm" />
   </head>
   <body>
     <div id="root"></div>
