feat(web): add feedback

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <meta name="keywords" content="chill music, online radio station, streaming music, relaxing playlists, variety music" />
     <meta property="og:title" content="tapnchill | The Best Online Music Streaming Radio Station" />
     <meta property="og:description" content="Discover a variety of music genres to relax and chill with. Live streaming now!" />
-    <meta property="og:url" content="https://tapnchill.fm" />
-    <meta property="og:image" content="https://tapnchill.fm/icon.png" />
+    <meta property="og:url" content="https://tapnchill.live" />
+    <meta property="og:image" content="https://tapnchill.live/icon.png" />
     <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="https://tapnchill.fm" />
+    <link rel="canonical" href="https://tapnchill.live" />
   </head>
   <body>
     <div id="root"></div>
