--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <meta name="robots" content="index, follow" />
     <link rel="canonical" href="https://tapnchill.live" />
   </head>
+  <!-- 100% privacy-first analytics -->
+  <script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
+  <noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
