--- a/index.html
+++ b/index.html
@@ -1,24 +1,47 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/icon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tap & Chill</title>
-    <meta name="description" content="Tune into tapnchill for the best in chill music and relaxing tunes, 24/7 live streaming radio station." />
-    <meta name="keywords" content="chill music, online radio station, streaming music, relaxing playlists, variety music" />
-    <meta property="og:title" content="tapnchill | The Best Online Music Streaming Radio Station" />
-    <meta property="og:description" content="Discover a variety of music genres to relax and chill with. Live streaming now!" />
-    <meta property="og:url" content="https://tapnchill.live" />
-    <meta property="og:image" content="https://tapnchill.live/icon.png" />
-    <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="https://tapnchill.live" />
-  </head>
-  <!-- 100% privacy-first analytics -->
-  <script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
-  <noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/icon.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Tap & Chill</title>
+
+  <meta name="description" content="tapnchill is your go-to online radio station for the best in chill, relaxing, and ambient music. Whether you're looking to unwind with chilling music, enjoy long listening sessions, or find the perfect soundtrack for your day, Tapnchill offers 24/7 live streaming. Tune in for a wide variety of music genres designed to help you relax, focus, or simply vibe out." />
+  <meta name="keywords" content="tapnchill, tap and chill, chill music, chilling music, long listening music, relaxing playlists, ambient music, 24/7 live music, online radio, streaming music, calming tunes, music to relax, background music, focus music, soothing music, chillout radio, study music, relaxation music" />
+
+  <meta property="og:title" content="tapnchill | The Best Online Music Streaming Radio Station" />
+  <meta property="og:description" content="Discover chilling music, long listening music, and relaxing playlists with tapnchill's 24/7 live streaming station. Tune in and chill out!" />
+  <meta property="og:url" content="https://tapnchill.live" />
+  <meta property="og:image" content="https://tapnchill.live/icon.png" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="tapnchill" />
+  <meta property="og:locale" content="en_US" />
+
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="tapnchill | The Best Online Music Streaming Radio Station" />
+  <meta name="twitter:description" content="Discover chilling music, long listening music, and relaxing playlists with tapnchill's 24/7 live streaming station. Tune in and chill out!" />
+  <meta name="twitter:image" content="https://tapnchill.live/icon.png" />
+  <meta name="twitter:site" content="@tapnchill" />
+
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://tapnchill.live" />
+
+  <!-- Schema.org structured data -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "MusicGroup",
+      "name": "tapnchill",
+      "url": "https://tapnchill.live",
+      "genre": ["Chill music", "Chilling music", "Long listening music", "Ambient music", "Soothing tunes"],
+      "description": "tapnchill offers 24/7 live streaming with the best chilling and relaxing music. Perfect for long listening sessions."
+    }
+  </script>
+</head>
+<script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
+<noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
+<body>
+<div id="root"></div>
+</body>
 </html>
