chore(web): improve SEO

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Tap & Chill</title>
 
-  <meta name="description" content="tapnchill is your go-to online radio station for the best in chill, relaxing, and ambient music. Whether you're looking to unwind with chilling music, enjoy long listening sessions, or find the perfect soundtrack for your day, Tapnchill offers 24/7 live streaming. Tune in for a wide variety of music genres designed to help you relax, focus, or simply vibe out." />
+  <meta name="description" content="tapnchill is your go-to online radio station for the best in chill, relaxing, and ambient music. Whether you're looking to unwind with chilling music, enjoy long listening sessions, or find the perfect soundtrack for your day, tapnchill offers 24/7 live streaming. Tune in for a wide variety of music genres designed to help you relax, focus, or simply vibe out." />
   <meta name="keywords" content="tapnchill, tap and chill, chill music, chilling music, long listening music, relaxing playlists, ambient music, 24/7 live music, online radio, streaming music, calming tunes, music to relax, background music, focus music, soothing music, chillout radio, study music, relaxation music" />
 
   <meta property="og:title" content="tapnchill | The Best Online Music Streaming Radio Station" />
@@ -39,9 +39,13 @@
     }
   </script>
 </head>
+
+<!-- 100% privacy-first analytics -->
 <script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
 <noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
+
 <body>
 <div id="root"></div>
+<script type="module" src="/src/main.tsx"></script>
 </body>
 </html>
